# mlx-model-hub

./: .gitignore  CLAUDE.md  SETUP_INSTRUCTIONS.md
ai-tools/mlx-model-hub/backend/: .env.example  pyproject.toml
ai-tools/mlx-model-hub/inference-server/: .gitignore  CONTEXT.md  README.md  TESTING_FINAL_REPORT.md  TESTING_STATUS.md  mcp_server.py  pyproject.toml  run.py
ai-tools/silicon-studio-audit/backend/: README.md  main.py  pyproject.toml
ai-tools/streamind/: CLAUDE.md  FULL_AUDIT_REPORT.md  IMPLEMENTATION_PLAN.md  PLAN_REVIEW.md  README.md  STRATEGY.md  pyproject.toml
ai-tools/streamind/.taskmaster/: config.json
personal/crewai-automation-platform/: .env.example  .gitignore  AUDIT_AND_ROADMAP.md  CLAUDE.md  README.md  SESSION_HANDOFF.md  docker-compose.yml  pyproject.toml
personal/crewai-automation-platform/tests/: __init__.py  conftest.py  test_crews.py  test_health.py  test_kas.py  test_research_kas.py  test_structured_outputs.py
personal/crewai-automation-platform/web/: package-lock.json  package.json
personal/knowledge-activation-system/: .env.example  .gitignore  CLAUDE.md  Dockerfile.dev  Dockerfile.prod  README.md  SESSION_HANDOFF.md  cli.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.unified.yml  docker-compose.yml  pyproject.toml
personal/knowledge-activation-system/.github/: dependabot.yml
personal/knowledge-activation-system/docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CODE_SNIPPETS.md  CRITICAL_ANALYSIS.md  DATABASE_SCHEMA.md  DECISIONS.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_COMPLETE.md  IMPLEMENTATION_PLAN_V2.md  INTEGRATIONS.md  KNOWLEDGE_SEEDER_INTEGRATION.md  LOCALCREW_INTEGRATION.md  LOCAL_AI_AUTOMATION.md  MASTER_ROADMAP.md  MIGRATION_PLAN.md  PROJECT_STATUS.md  PROMPT_FOR_KNOWLEDGE_SEEDER.md  QUICK_START.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_AUDIT_2026-01-18.md  SESSION_2026-01-13_PRODUCTION_READINESS.md  SESSION_2026-01-14_SEARCH_OPTIMIZATION.md  SESSION_HANDOFF.md
personal/knowledge-activation-system/evaluation/: evaluate.py  test_queries.yaml
personal/knowledge-activation-system/integrations/: README.md
personal/knowledge-activation-system/mcp-server/: README.md  __init__.py  claude_desktop_config.example.json  package-lock.json  package.json  requirements.txt  server.py
personal/knowledge-activation-system/monitoring/: README.md  docker-compose.yml
personal/knowledge-activation-system/scripts/: README.md  auto_ingest.sh  backup.sh  batch_generate_content.py  com.kas.api.plist  com.kas.backup.plist  com.kas.ingest.plist  com.kas.maintenance.plist  comprehensive_seeder.py  content_generator.py  daily_backup.sh  daily_content_generation.sh  fix_embeddings.py  generate_single.py  health-check.sh  ollama_generate.sh  ollama_generate_batch4.sh  ollama_generate_batch5.sh  ollama_generate_batch6.sh  ollama_quick_batch.sh  restore.sh  review-cli.py  seed_dev.py  setup_cron.sh  setup_launchd.sh  targeted_content.py
personal/knowledge-activation-system/tests/: __init__.py  conftest.py  test_ai.py  test_api_integration.py  test_autotag.py  test_cache.py  test_chunking.py  test_db.py  test_db_entities.py  test_embeddings.py  test_entity_extraction.py  test_evaluation_metrics.py  test_multihop.py  test_obsidian.py  test_qa.py  test_query_expansion.py  test_query_router.py  test_reranker.py  test_review.py  test_search.py  test_validation.py
personal/knowledge-activation-system/web/: .env.example  .gitignore  Dockerfile.prod  docker-compose.prod.yml  next.config.ts  package-lock.json  package.json
personal/knowledge-engine/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
personal/knowledge-engine/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
personal/knowledge-engine/frontend/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
personal/knowledge-engine/monitoring/: docker-compose.monitoring.yml
personal/knowledge-engine/tests/: __init__.py  test_config.py  test_models.py
projects-2026/end-of-january-projects/ai-native-dev-environment/: AUDIT_REPORT.md  CLAUDE_MISSION.md  CODEX_BRIEF.md  MISSION_REPORT.md  PROJECT.md  README.md  ROADMAP.md  pyproject.toml
projects-2026/end-of-january-projects/ai-operations-dashboard/: .env.example  CLAUDE.md  PROJECT.md  pyproject.toml
projects-2026/end-of-january-projects/personal-context-layer/: CODEX_BRIEF.md  PROJECT.md  README.md  pyproject.toml
projects-2026/end-of-january-projects/self-improving-agents/: .env.example  .gitignore  CLAUDE.md  CODEX_BRIEF.md  PROJECT.md  README.md  REMEDIATION_ROADMAP.md  cli.py  pyproject.toml
projects-2026/end-of-january-projects/universal-context-engine/: .env.example  CLAUDE.md  CODEX_BRIEF.md  PROJECT.md  README.md  pyproject.toml
projects-2026/knowledge-seeder/: CLAUDE.md  COMPLETE_MESSAGE_TO_KNOWLEDGE_ENGINE.md  DATA_ACQUISITION_ROADMAP.md  HANDOFF_TO_KNOWLEDGE_ENGINE.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_STRATEGY.md  MESSAGE_FOR_KE_CHAT.md  README.md  fix_migration.py  full_migration.py  pyproject.toml  sync.sh  test_migration.py
projects-2026/knowledge-seeder/docs/: CURRENT_STATE.md  ROADMAP.md  SESSION_LOG.md
projects-2026/knowledge-seeder/sources/: agent-frameworks.yaml  ai-research.yaml  apple-mlx.yaml  best-practices.yaml  frameworks.yaml  infrastructure.yaml  project-browser-automation.yaml  project-mcp-servers.yaml  project-rag-evaluation.yaml  project-voice-ai.yaml  tools.yaml  tutorials-youtube.yaml
projects-2026/knowledge-seeder/tests/: __init__.py  test_extractors.py  test_source_parser.py  test_state.py
templates/vibe-templates/: README.md  pyproject.toml
templates/vibe-templates/agent-starter-pack/: .gitignore  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  llm.txt  pyproject.toml
templates/vibe-templates/agentics/: .gitignore  CODEOWNERS  Makefile  README.md  SUPPORT.md  TODO.md
templates/vibe-templates/langgraph-starter-kit/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
templates/vibe-templates/vibe-coding-template/: AGENTS.md  (+2 more)
(+1103 files in other folders)
