[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamind"
version = "0.1.0"
description = "Real-time screen analysis with local AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Saagar" }]
keywords = ["ai", "vision", "screen-capture", "ollama", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mss>=9.0",                        # Screen capture
    "pillow>=10.0",                    # Image processing
    "httpx>=0.25",                     # Async HTTP for Ollama
    "click>=8.1",                      # CLI framework
    "rich>=13.0",                      # CLI formatting
    "rumps>=0.4",                      # macOS menu bar
    "pyobjc-framework-Quartz>=10.0",   # Window detection
    "pyobjc-framework-AppKit>=10.0",   # macOS app framework
    "imagehash>=4.3",                  # Perceptual hashing
    "pydantic>=2.0",                   # Data validation
    "pydantic-settings>=2.0",          # Settings management
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109",                  # HTTP API
    "uvicorn>=0.27",                   # ASGI server
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]
all = ["streamind[api,dev]"]

[project.scripts]
streamind = "streamind.cli:app"

[project.urls]
Homepage = "https://github.com/saagar/streamind"
Repository = "https://github.com/saagar/streamind"

[tool.hatch.build.targets.wheel]
packages = ["src/streamind"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["streamind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mss.*", "rumps.*", "imagehash.*", "Quartz.*", "AppKit.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/streamind"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
