[project]
name = "knowledge-activation-system"
version = "0.1.0"
description = "AI-powered personal knowledge management with hybrid search and spaced repetition"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Saagar"}
]

dependencies = [
    # Core
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Logging (P15)
    "structlog>=24.0.0",
    # Health checks (P23)
    "psutil>=5.9.0",
    # Caching
    "redis>=5.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fsrs>=6.3.0",
]

[project.optional-dependencies]
# Phase 2: Content Ingestion
ingestion = [
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.0.0",
    "trafilatura>=1.6.0",
    "pypdf>=4.0.0",
    "langchain-text-splitters>=0.2.0",
]

# Phase 3: Intelligence Layer
ai = [
    "openai>=1.0.0",
    "instructor>=1.13.0",
]

# LlamaIndex RAG Framework
llamaindex = [
    "llama-index-core>=0.11.0",
    "llama-index-llms-ollama>=0.3.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "sentence-transformers>=3.0.0",  # For local reranking
]

# Phase 4: Web Application
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",  # File uploads
]

# Phase 5: Active Engagement
fsrs = [
    "fsrs>=4.0.0",
]

# Whisper for YouTube fallback (optional, large dependency)
whisper = [
    "openai-whisper>=20231117",
]

# Phase 12: Multi-Modal Intelligence
multimodal = [
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pymupdf>=1.24.0",
    "faster-whisper>=1.0.0",
    "opencv-python>=4.9.0",
]

# Observability
observability = [
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "prometheus-client>=0.20.0",
]

# Caching
cache = [
    "redis>=5.0.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    # Load testing (P29)
    "locust>=2.20.0",
    # Security testing (P32)
    "bandit>=1.7.0",
    # Mutation testing (P31)
    "mutmut>=2.4.0",
]

# All dependencies
all = [
    "knowledge-activation-system[ingestion,ai,api,fsrs,llamaindex,multimodal,observability,cache,dev]",
]

[project.scripts]
knowledge = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires real database)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false  # Too noisy with asyncpg/redis returning Any
warn_unused_ignores = false  # Allow defensive ignores
disallow_any_generics = false  # Allow dict without type params in some cases
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "pgvector.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["knowledge_engine.*"]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["knowledge"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "evaluation"]
skips = ["B101"]  # Allow assert in non-test code for validation

[tool.mutmut]
paths_to_mutate = "src/knowledge/"
tests_dir = "tests/"
runner = "pytest -x -q"

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "types-psutil>=7.2.1.20260116",
    "types-pyyaml>=6.0.12.20250915",
]
