[project]
name = "vibe-templates"
version = "0.1.0"
description = "Smart project generator for vibe coding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
vibe = "vibe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe"]
