[project]
name = "unified-mlx-app"
version = "0.1.0"
description = "Unified MLX AI Application - Text, Vision, and Speech in one interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gradio>=4.0.0",  # Legacy UI - can be removed when using React frontend
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
    "mlx-vlm>=0.1.0",
    "mlx-audio>=0.1.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "loguru>=0.7.0",
    "tiktoken>=0.12.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
unified-mlx = "unified_mlx_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
