[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kas-client"
version = "0.1.0"
description = "Python SDK for Knowledge Activation System (KAS)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "KAS Team" }
]
keywords = ["knowledge-management", "search", "embeddings", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/knowledge-activation-system"
Documentation = "https://github.com/your-org/knowledge-activation-system#readme"
Repository = "https://github.com/your-org/knowledge-activation-system"

[tool.hatch.build.targets.wheel]
packages = ["kas_client"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
